# coheron

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  PROTOTYPE.md  README.md  integration_test.py  quantum_layer.py  requirements.txt  run.sh  test_quantum_layer.py
bridge/: README.md  __init__.py  bridge.py
data/: README.md
docs/trd/: index.md
quantum-layer/: quantum_processor.py
quantum_layer/: README.md  __init__.py  quantum_processor.py  requirements.txt
rust-core/: README.md
rust_core/: Cargo.toml
rust_core/src/: bridge.rs  logger.rs  main.rs  model.rs
src/: main.rs
tests/: test_bridge.py  test_quantum_layer.py
