[package]
name = "coheron"
version = "0.1.0"
edition = "2021"
authors = ["Riley Seaburg"]
description = "Quantum-Guided Symbolic Agent"

[dependencies]
rust-bert = "0.21.0"
tokenizers = "0.13.4"
tch = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tempfile = "3.8"
